# AI_Companion_bot

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
archieve_docs/: 01-identity_spec.md  01-identity_tracker.md  02-telegram_adapter_spec.md  02-telegram_adapter_tracker.md  03-memory_spec.md  04-policy_safety_spec.md  04-policy_safety_tracker.md  06-dialog_service_spec.md  06-dialog_service_tracker.md  07-astrology_spec.md  08-tarot_spec.md  09-daily_ritual_tracker.md  11-admin_panel_tracker.md  12-kb_ingest_v2_spec.md  12-kb_ingest_v2_tracker.md  stage1_foundation_spec.md
dev_spec/: 03-memory_tracker.md  05-llm_router_spec.md  05-llm_router_tracker.md  07-astrology_tracker.md  08-tarot_tracker.md  09-daily_ritual_spec.md  10-free_billing_spec.md  10-free_billing_tracker.md  11-admin_panel_spec.md  13-onboarding_golden_moment_spec.md  13-onboarding_golden_moment_tracker.md  14-dreams_spec.md  14-dreams_tracker.md  15-numerology_spec.md  15-numerology_tracker.md  16-psychology_journal_spec.md  16-psychology_journal_tracker.md  17-deep_retrieval_spec.md  17-deep_retrieval_tracker.md  18-proactive_spec.md  18-proactive_tracker.md  Mirror_POD_v2.md  stage1_foundation_spec.md  stage1_foundation_tracker.md  stage2.1_overview_spec.md  stage2_overview_spec.md  stage2_tracker.md  Стек «Зеркало»  production-ready с первого дня.md
docs/: api.md  architecture.md  knowledge_base.md  llm_routing.md  memory_stage2.md
mirror/: config.py  dependencies.py  logging_setup.py  main.py
(+239 files in other folders)
